<resources>
    <string name="app_name">Benson Maniac</string>

    <string name="start_banner_ads_string">Start Banner Ads</string>
    <string name="show_interstitial_1_string">Start Interstitial 1</string>
    <string name="show_interstitial_2_string">Start Interstitial 2</string>
    <string name="show_interstitial_3_string">Start Interstitial 3</string>
    <string name="show_interstitial_4_string">Start Interstitial 4</string>
    <string name="show_interstitial_5_string">Start Interstitial 5</string>
    <string name="next_string">Next</string>
    <string name="stop_banner_ads">Stop Banner Ads</string>
    <string name="stop_interstitial_ads">Stop Loading Ads</string>

    <!--  Roy's Ads  -->
<!--        <string name="ad_app_id">ca-app-pub-2442497647180977~4020309363</string>-->
<!--        <string name="banner_ad_1">ca-app-pub-2442497647180977/9810309201</string>-->
<!--        <string name="banner_ad_2">ca-app-pub-2442497647180977/7767982686</string>-->
<!--        <string name="banner_ad_3">ca-app-pub-2442497647180977/6319169649</string>-->
<!--        <string name="banner_ad_4">ca-app-pub-2442497647180977/5141819345</string>-->
<!--        <string name="banner_ad_5">ca-app-pub-2442497647180977/5510087647</string>-->
<!--        <string name="banner_ad_6">ca-app-pub-2442497647180977/7491461146</string>-->
<!--        <string name="banner_ad_7">ca-app-pub-2442497647180977/6112120238</string>-->
<!--        <string name="interstitial_ad_1">ca-app-pub-2442497647180977/2172875222</string>-->
<!--        <string name="interstitial_ad_2">ca-app-pub-2442497647180977/9343405347</string>-->
<!--        <string name="interstitial_ad_3">ca-app-pub-2442497647180977/4557982521</string>-->
<!--        <string name="interstitial_ad_4">ca-app-pub-2442497647180977/8030323679</string>-->

    <!--  Andii Ads  -->
<!--    <string name="ad_app_id">ca-app-pub-5022917256332506~8925490997</string>-->
<!--    <string name="banner_ad_1">ca-app-pub-5022917256332506/8343037067</string>-->
<!--    <string name="banner_ad_2">ca-app-pub-5022917256332506/5525302030</string>-->
<!--    <string name="banner_ad_3">ca-app-pub-5022917256332506/4716806764</string>-->
<!--    <string name="banner_ad_4">ca-app-pub-5022917256332506/7984778560</string>-->
<!--    <string name="banner_ad_5">ca-app-pub-5022917256332506/1419370216</string>-->
<!--    <string name="banner_ad_6">ca-app-pub-5022917256332506/7363151409</string>-->
<!--    <string name="banner_ad_7">ca-app-pub-5022917256332506/9106288542</string>-->
<!--    <string name="interstitial_ad_1">ca-app-pub-5022917256332506/3637505299</string>-->
<!--    <string name="interstitial_ad_2">ca-app-pub-5022917256332506/1818099119</string>-->
<!--    <string name="interstitial_ad_3">ca-app-pub-5022917256332506/9365416642</string>-->
<!--    <string name="interstitial_ad_4">ca-app-pub-5022917256332506/6739253307</string>-->
<!--    <string name="interstitial_ad_5">ca-app-pub-5022917256332506/9173844958</string>-->

    <!--  Vincent's Ads  -->
    <string name="ad_app_id">ca-app-pub-9212936261103508~7714762358</string>
    <string name="banner_ad_1">ca-app-pub-9212936261103508/1147136967</string>
    <string name="banner_ad_2">ca-app-pub-9212936261103508/4894810281</string>
    <string name="banner_ad_3">ca-app-pub-9212936261103508/8347163651</string>
    <string name="banner_ad_4">ca-app-pub-9212936261103508/7189801130</string>
    <string name="banner_ad_5">ca-app-pub-9212936261103508/5876719463</string>
    <string name="banner_ad_6">ca-app-pub-9212936261103508/6998229442</string>
    <string name="banner_ad_7">ca-app-pub-9212936261103508/1745902760</string>
    <string name="interstitial_ad_1">ca-app-pub-9212936261103508/3466178546</string>
    <string name="interstitial_ad_2">ca-app-pub-9212936261103508/7908179953</string>
    <string name="interstitial_ad_3">ca-app-pub-9212936261103508/6858628644</string>
    <string name="interstitial_ad_4">ca-app-pub-9212936261103508/5146285244</string>


    <!--  Constants  -->
    <string name="banner_ad_8">ca-app-pub-5022917256332506/9591527797</string>
    <string name="banner_ad_9">ca-app-pub-5022917256332506/9018465112</string>
    <string name="banner_ad_10">ca-app-pub-5022917256332506/3766138435</string>
    <string name="interstitial_ad_8">ca-app-pub-5022917256332506/6739253307</string>
    <string name="interstitial_ad_9">ca-app-pub-5022917256332506/1818099119</string>

</resources>
