<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/to_banner_activity_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/next_string"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/show_banner_ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:text="@string/start_banner_ads_string"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        android:text="@string/app_name" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_2" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_4" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_3" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_6" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_2" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_1" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_5" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView7"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_7" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView8"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_6" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView9"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_1" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_3" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView11"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_4" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView12"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_5" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView13"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_7" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView14"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_2" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView15"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_4" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView16"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_6" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView17"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_4" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView18"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_7" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView19"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_5" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView20"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_2" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView21"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_3" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView22"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_1" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView23"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_2" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView24"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_7" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>